// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dual 1`] = `
{
  "npm": {
    "dependencies": {
      "@babel/preset-env": {
        "age": "3 years",
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "7.11.5",
        "old": "7.0.0",
      },
      "gulp-sourcemaps": {
        "age": "4 years",
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "2.6.5",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "age": "3 years",
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "4.0.0-beta.11",
        "old": "4.0.0-alpha.2",
      },
      "jpeg-buffer-orientation": {
        "age": "3 years",
        "info": "https://github.com/fisker/jpeg-buffer-orientation",
        "new": "2.0.3",
        "old": "0.0.0",
      },
      "noty": {
        "age": "5 years",
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta",
        "old": "3.1.0",
      },
      "prismjs": {
        "age": "4 years",
        "info": "https://github.com/LeaVerou/prism",
        "new": "1.17.1",
        "old": "1.0.0",
      },
      "react": {
        "age": "1 year",
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.2.0",
        "old": "18.0",
      },
      "styled-components": {
        "age": "3 years",
        "info": "https://github.com/styled-components/styled-components",
        "new": "5.0.0-rc.2",
        "old": "2.5.0-1",
      },
      "svgstore": {
        "age": "4 years",
        "info": "https://github.com/svgstore/svgstore",
        "new": "^3.0.0-2",
        "old": "^3.0.0",
      },
      "updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "peerDependencies": {
      "@babel/preset-env": {
        "age": "3 years",
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "~7.11.5",
        "old": "~6.0.0",
      },
    },
    "resolutions": {
      "versions/updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "^10.0.0",
        "old": "^1.0.0",
      },
    },
  },
  "pypi": {
    "dependencies": {
      "updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "tool.poetry.group.dev.dependencies": {
      "PyYAML": {
        "age": "1 year",
        "info": "https://github.com/yaml/pyyaml",
        "new": "6.0",
        "old": "6.0",
      },
      "djlint": {
        "age": "2 months",
        "info": "https://github.com/Riverside-Healthcare/djlint",
        "new": "1.31.0",
        "old": "1.30.0",
      },
    },
  },
}
`;

exports[`dual 2`] = `
{
  "npm": {
    "dependencies": {
      "noty": {
        "age": "5 years",
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta",
        "old": "3.1.0",
      },
    },
  },
}
`;

exports[`exclude 1`] = `
{
  "npm": {
    "dependencies": {
      "updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
  },
}
`;

exports[`exclude 2`] = `
{
  "npm": {
    "dependencies": {
      "react": {
        "age": "1 year",
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.2.0",
        "old": "18.0",
      },
    },
  },
}
`;

exports[`exclude 3`] = `
{
  "npm": {
    "dependencies": {
      "gulp-sourcemaps": {
        "age": "4 years",
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "2.6.5",
        "old": "2.0.0",
      },
    },
  },
}
`;

exports[`exclude 4`] = `
{
  "npm": {
    "dependencies": {
      "gulp-sourcemaps": {
        "age": "6 years",
        "info": "https://github.com/floridoo/gulp-sourcemaps",
        "new": "2.0.1",
        "old": "2.0.0",
      },
    },
  },
}
`;

exports[`greatest 1`] = `
{
  "npm": {
    "dependencies": {
      "@babel/preset-env": {
        "age": "3 years",
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "7.11.5",
        "old": "7.0.0",
      },
      "gulp-sourcemaps": {
        "age": "4 years",
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "2.6.5",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "age": "3 years",
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "4.0.0-beta.11",
        "old": "4.0.0-alpha.2",
      },
      "jpeg-buffer-orientation": {
        "age": "3 years",
        "info": "https://github.com/fisker/jpeg-buffer-orientation",
        "new": "2.0.3",
        "old": "0.0.0",
      },
      "noty": {
        "age": "5 years",
        "info": "https://github.com/needim/noty",
        "new": "3.1.4",
        "old": "3.1.0",
      },
      "prismjs": {
        "age": "4 years",
        "info": "https://github.com/LeaVerou/prism",
        "new": "1.17.1",
        "old": "1.0.0",
      },
      "react": {
        "age": "1 year",
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.2.0",
        "old": "18.0",
      },
      "styled-components": {
        "age": "3 years",
        "info": "https://github.com/styled-components/styled-components",
        "new": "5.0.0-rc.2",
        "old": "2.5.0-1",
      },
      "updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "peerDependencies": {
      "@babel/preset-env": {
        "age": "3 years",
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "~7.11.5",
        "old": "~6.0.0",
      },
    },
    "resolutions": {
      "versions/updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "^10.0.0",
        "old": "^1.0.0",
      },
    },
  },
}
`;

exports[`include 1`] = `
{
  "npm": {
    "dependencies": {
      "noty": {
        "age": "5 years",
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta",
        "old": "3.1.0",
      },
    },
  },
}
`;

exports[`include 2`] = `
{
  "npm": {
    "dependencies": {
      "noty": {
        "age": "5 years",
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta",
        "old": "3.1.0",
      },
    },
  },
}
`;

exports[`include 3`] = `
{
  "npm": {
    "dependencies": {
      "noty": {
        "age": "5 years",
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta",
        "old": "3.1.0",
      },
    },
  },
}
`;

exports[`latest 1`] = `
{
  "npm": {
    "dependencies": {
      "@babel/preset-env": {
        "age": "3 years",
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "7.11.5",
        "old": "7.0.0",
      },
      "gulp-sourcemaps": {
        "age": "4 years",
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "2.6.5",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "age": "3 years",
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "4.0.0-beta.11",
        "old": "4.0.0-alpha.2",
      },
      "jpeg-buffer-orientation": {
        "age": "3 years",
        "info": "https://github.com/fisker/jpeg-buffer-orientation",
        "new": "2.0.3",
        "old": "0.0.0",
      },
      "noty": {
        "age": "5 years",
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta",
        "old": "3.1.0",
      },
      "prismjs": {
        "age": "4 years",
        "info": "https://github.com/LeaVerou/prism",
        "new": "1.17.1",
        "old": "1.0.0",
      },
      "react": {
        "age": "1 year",
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.2.0",
        "old": "18.0",
      },
      "styled-components": {
        "age": "3 years",
        "info": "https://github.com/styled-components/styled-components",
        "new": "5.0.0-rc.2",
        "old": "2.5.0-1",
      },
      "svgstore": {
        "age": "4 years",
        "info": "https://github.com/svgstore/svgstore",
        "new": "^3.0.0-2",
        "old": "^3.0.0",
      },
      "updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "peerDependencies": {
      "@babel/preset-env": {
        "age": "3 years",
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "~7.11.5",
        "old": "~6.0.0",
      },
    },
    "resolutions": {
      "versions/updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "^10.0.0",
        "old": "^1.0.0",
      },
    },
  },
}
`;

exports[`patch 1`] = `
{
  "npm": {
    "dependencies": {
      "gulp-sourcemaps": {
        "age": "6 years",
        "info": "https://github.com/floridoo/gulp-sourcemaps",
        "new": "2.0.1",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "age": "3 years",
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "4.0.0-beta.11",
        "old": "4.0.0-alpha.2",
      },
      "noty": {
        "age": "5 years",
        "info": "https://github.com/needim/noty",
        "new": "3.1.4",
        "old": "3.1.0",
      },
      "svgstore": {
        "age": "4 years",
        "info": "https://github.com/svgstore/svgstore",
        "new": "^3.0.0-2",
        "old": "^3.0.0",
      },
      "updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "resolutions": {
      "versions/updates": {
        "age": "5 years",
        "info": "https://github.com/silverwind/updates",
        "new": "^1.0.6",
        "old": "^1.0.0",
      },
    },
  },
}
`;

exports[`prerelease 1`] = `
{
  "npm": {
    "dependencies": {
      "@babel/preset-env": {
        "age": "3 years",
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "7.11.5",
        "old": "7.0.0",
      },
      "gulp-sourcemaps": {
        "age": "4 years",
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "2.6.5",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "age": "3 years",
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "4.0.0-beta.11",
        "old": "4.0.0-alpha.2",
      },
      "jpeg-buffer-orientation": {
        "age": "3 years",
        "info": "https://github.com/fisker/jpeg-buffer-orientation",
        "new": "2.0.3",
        "old": "0.0.0",
      },
      "noty": {
        "age": "5 years",
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta",
        "old": "3.1.0",
      },
      "prismjs": {
        "age": "4 years",
        "info": "https://github.com/LeaVerou/prism",
        "new": "1.17.1",
        "old": "1.0.0",
      },
      "react": {
        "age": "9 months",
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.3.0-next-d1e35c703-20221110",
        "old": "18.0",
      },
      "styled-components": {
        "age": "3 years",
        "info": "https://github.com/styled-components/styled-components",
        "new": "5.0.0-rc.2",
        "old": "2.5.0-1",
      },
      "svgstore": {
        "age": "4 years",
        "info": "https://github.com/svgstore/svgstore",
        "new": "^3.0.0-2",
        "old": "^3.0.0",
      },
      "updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "peerDependencies": {
      "@babel/preset-env": {
        "age": "3 years",
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "~7.11.5",
        "old": "~6.0.0",
      },
    },
    "resolutions": {
      "versions/updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "^10.0.0",
        "old": "^1.0.0",
      },
    },
  },
}
`;

exports[`pypi 1`] = `
{
  "pypi": {
    "tool.poetry.group.dev.dependencies": {
      "PyYAML": {
        "age": "1 year",
        "info": "https://github.com/yaml/pyyaml",
        "new": "6.0",
        "old": "6.0",
      },
      "djlint": {
        "age": "2 months",
        "info": "https://github.com/Riverside-Healthcare/djlint",
        "new": "1.31.0",
        "old": "1.30.0",
      },
    },
  },
}
`;

exports[`release 1`] = `
{
  "npm": {
    "dependencies": {
      "@babel/preset-env": {
        "age": "3 years",
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "7.11.5",
        "old": "7.0.0",
      },
      "gulp-sourcemaps": {
        "age": "4 years",
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "2.6.5",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "age": "5 years",
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "3.2.0",
        "old": "4.0.0-alpha.2",
      },
      "jpeg-buffer-orientation": {
        "age": "3 years",
        "info": "https://github.com/fisker/jpeg-buffer-orientation",
        "new": "2.0.3",
        "old": "0.0.0",
      },
      "noty": {
        "age": "5 years",
        "info": "https://github.com/needim/noty",
        "new": "3.1.4",
        "old": "3.1.0",
      },
      "prismjs": {
        "age": "4 years",
        "info": "https://github.com/LeaVerou/prism",
        "new": "1.17.1",
        "old": "1.0.0",
      },
      "react": {
        "age": "1 year",
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.2.0",
        "old": "18.0",
      },
      "styled-components": {
        "age": "3 years",
        "info": "https://github.com/styled-components/styled-components",
        "new": "4.4.1",
        "old": "2.5.0-1",
      },
      "svgstore": {
        "age": "5 years",
        "info": "https://github.com/svgstore/svgstore",
        "new": "^2.0.3",
        "old": "^3.0.0",
      },
      "updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "peerDependencies": {
      "@babel/preset-env": {
        "age": "3 years",
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "~7.11.5",
        "old": "~6.0.0",
      },
    },
    "resolutions": {
      "versions/updates": {
        "age": "3 years",
        "info": "https://github.com/silverwind/updates",
        "new": "^10.0.0",
        "old": "^1.0.0",
      },
    },
  },
}
`;
